[package]
name = "theseus"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.87", default-features = false, features = ["std"] }
clap = { version = "4.5.17", default-features = false, features = ["derive", "help", "std", "cargo", "error-context"] }
current_platform = "0.2.0"
faster-hex = { version = "0.10.0", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["executor"] }
nix = { version = "0.29.0", default-features = false, features = ["fs", "user", "feature"] }
openssh = { version = "0.11.2", features = ["process-mux", "native-mux"] }
postcard = { version = "1.0.10", default-features = false, features = ["use-std", "alloc"] }
serde = { version = "1.0.210", default-features = false, features = ["serde_derive", "default", "alloc"] }
serde_bytes = { version = "0.11.15", default-features = false }
sha3 = { version = "0.10.8", default-features = false , features = ["std"]}
snap = "1.1.1"
tar = { version = "0.4.41", default-features = false }
thiserror = { version = "1.0.63", default-features = false }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
trait-variant = "0.1.2"
walkdir = "2.5.0"

[[bin]]
name = "theseusg"
path = "src/golem.rs"

[[bin]]
name = "theseus"
path = "src/wizard.rs"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"

