[package]
name = "theseus"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.87", default-features = false, features = ["std"] }
clap = { version = "4.5.17", default-features = false, features = ["derive", "help", "std", "cargo", "error-context"] }
const-hex = "1.13.1"
current_platform = "0.2.0"
futures = { version = "0.3.31", default-features = false, features = ["executor"] }
getrandom = { version = "0.2.15", features = ["rdrand", "std"] }
nix = { version = "0.29.0", default-features = false, features = ["fs", "user", "feature"] }
openssh = { version = "0.11.2", features = ["process-mux", "native-mux"] }
postcard = { version = "1.0.10", default-features = false, features = ["use-std", "alloc"] }
serde = { version = "1.0.210", default-features = false, features = ["serde_derive", "default", "alloc"] }
serde_bytes = { version = "0.11.15", default-features = false }
snap = "1.1.1"
subtle = { version = "2.6.1", features = ["const-generics"] }
thiserror = { version = "1.0.63", default-features = false }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
xoodyak = "0.8.4"
zerocopy = { version = "0.8.7", features = ["std", "derive", "simd"] }
zeroize = { version = "1.8.1", features = ["derive", "simd", "aarch64", "std"] }

[[bin]]
name = "theseusg"
path = "src/golem.rs"

[[bin]]
name = "theseus"
path = "src/wizard.rs"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"

